# polars-uuid

./: Cargo.toml  Makefile  README.md  pyproject.toml  rustfmt.toml
.github/workflows/: publish_to_pypi.yml
benchmarks/: uuid4_generation.py
polars_uuid/: __init__.py  _constants.py  _register_plugin.py  uuid_utils.py  v4.py  v7.py  v8.py
src/: lib.rs  uuid_utils.rs  uuid_v4.rs  uuid_v7.rs  uuid_v8.rs
tests/: test_pig_latinnify.py  test_scalar_expressions.py  test_uuid_utils.py  test_uuid_v4.py  test_uuid_v7.py  test_uuid_v8.py
