[package]
name = "polars-uuid"
version = "0.6.0"
edition = "2024"

[lib]
name = "polars_uuid"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.53.0", features = ["dtype-date", "timezones"], default-features = false }
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py313"] }
pyo3-polars = { version = "0.26.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.16.0", features = ["fast-rng", "v4", "v7"] }
