[package]
name = "polars-uuid"
version = "0.7.1"
edition = "2024"

[lib]
name = "polars_uuid"
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
blake3 = "1.8.5"
polars = { version = "0.54.4", features = ["dtype-date", "dtype-u128", "timezones"], default-features = false }
pyo3 = { version = "0.28.0", features = ["extension-module", "abi3-py313"] }
pyo3-polars = { version = "0.27.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.16.0", features = ["fast-rng", "v4", "v7", "v8"] }
